04-Ingress-in-kubernates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-namespace
  labels:
    purpose: application-tier
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: database-namespace
  labels:
    purpose: database-tier
    environment: development
