04-Ingress-in-kubernates/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  namespace: app-namespace
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
      - name: mongodb-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: app-namespace
  labels:
    app: mongodb-express
spec:
  selector:
    app: mongodb-express
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
