04-Ingress-in-kubernates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress # Name of the Ingress resource
  namespace: app-namespace # Ingress must be in the same namespace as the service it routes to
  annotations:
    # Use nginx ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: / # Rewrite the URL path to root when forwarding to the service
spec:
  ingressClassName: nginx # Specify the ingress class to use (nginx in this case)
  rules:
  - host: mongo.local # Hostname to access the application (add to /etc/hosts for local testing)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-express-service
            port:
              number: 8081 # Port of the Mongo-Express service to route to
